GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/test_circular_include.deca
// Test : Circular include
// But : interdire les include circulaire.
// Type d'erreur : erreur syntaxique
// Résultat attendu : Circular Include

#include "fichier_1.decah"

